fix: added spacing and updated homepage

--- a/src/app/(profile)/(components)/AppHeader/AppHeader.module.scss
+++ b/src/app/(profile)/(components)/AppHeader/AppHeader.module.scss
@@ -124,4 +124,5 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 14px;
 }
